--- a/sde/pom.xml
+++ b/sde/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.6.0-dov-1.0</version>
+    <version>3.6.0-dov-1.1-SNAPSHOT</version>
   </parent>
 
 
