--- a/common/pom.xml
+++ b/common/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.6.0-dov-1.1-SNAPSHOT</version>
+    <version>3.6.0-dov-1.1</version>
   </parent>
 
 
