--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <artifactId>geonetwork</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.6.0-dov-1.1</version>
+    <version>3.6.0-dov-1.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
