--- a/jmeter/pom.xml
+++ b/jmeter/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.6.0-dov-1.1</version>
+    <version>3.6.0-dov-1.2-SNAPSHOT</version>
   </parent>
   <!-- =========================================================== -->
   <!--     Module Description                                      -->
