--- a/es/es-core/pom.xml
+++ b/es/es-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>es</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.6.0-dov-1.2-SNAPSHOT</version>
+    <version>3.6.0-dov-1.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>es-core</artifactId>
