--- a/es/es-dashboards/pom.xml
+++ b/es/es-dashboards/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <artifactId>es</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.6.0-dov-1.2-SNAPSHOT</version>
+    <version>3.6.0-dov-1.2</version>
   </parent>
   <profiles>
     <profile>
