--- a/schemas-test/pom.xml
+++ b/schemas-test/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <artifactId>geonetwork</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.6.0-dov-1.2</version>
+    <version>3.6.0-dov-1.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
