--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>geonetwork</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.6.0-dov-1.2</version>
+    <version>3.6.0-dov-1.3-SNAPSHOT</version>
   </parent>
 
   <version>3.5</version>
