--- a/web-ui/pom.xml
+++ b/web-ui/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.6.0-dov-1.2</version>
+    <version>3.6.0-dov-1.3-SNAPSHOT</version>
   </parent>
 
   <groupId>org.geonetwork-opensource</groupId>
