--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>geonetwork</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.10.2-0</version>
+    <version>3.10.2-dov-1.0-SNAPSHOT</version>
   </parent>
 
   <version>3.7</version>
@@ -51,11 +51,11 @@
     <module>dublin-core</module>
     <module>iso19110</module>
     <module>iso19139</module>
-    <module>iso19115-3.2018</module>
+<!--    <module>iso19115-3.2018</module> -->
   </modules>
   <properties>
     <rootProjectDir>../..</rootProjectDir>
-    <gn.project.version>3.10.2-0</gn.project.version>
+    <gn.project.version>3.10.2-dov-1.0-SNAPSHOT</gn.project.version>
   </properties>
 
 </project>
