--- a/web-ui/pom.xml
+++ b/web-ui/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.10.2-0</version>
+    <version>3.10.2-dov-1.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.geonetwork-opensource</groupId>
