--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
-    <version>3.10.2-0</version>
+    <version>3.10.2-dov-1.0-SNAPSHOT</version>
   </parent>
 
 
@@ -525,11 +525,11 @@
       <artifactId>schema-dublin-core</artifactId>
       <version>${gn.schemas.version}</version>
     </dependency>
-    <dependency>
+<!--    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>schema-iso19115-3.2018</artifactId>
       <version>${gn.schemas.version}</version>
-    </dependency>
+    </dependency> -->
 
     <dependency>
       <groupId>${project.groupId}</groupId>
