--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -31,7 +31,7 @@
     <version>3.10.2-dov-1.0-SNAPSHOT</version>
   </parent>
 
-  <version>3.7</version>
+  <version>3.10.2-dov-1.0-SNAPSHOT</version>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>schemas</artifactId>
