--- a/pom.xml
+++ b/pom.xml
@@ -1471,7 +1471,7 @@
     <jolokia.version>1.6.0</jolokia.version>
     <httpcomponents.version>4.5.9</httpcomponents.version>
 
-    <gn.schemas.version>3.7</gn.schemas.version>
+    <gn.schemas.version>3.10.2-dov-1.0-SNAPSHOT</gn.schemas.version>
     <acd.issueManagement.url>https://www.milieuinfo.be/jira</acd.issueManagement.url>
     <acd.ciManagement.system>Bamboo</acd.ciManagement.system>
     <acd.ciManagement.url>https://www.milieuinfo.be/bamboo</acd.ciManagement.url>
