--- a/schemas/dublin-core/pom.xml
+++ b/schemas/dublin-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>schemas</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.10.2-dov-1.0-SNAPSHOT</version>
+    <version>3.10.2-dov-1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
