--- a/es/es-dashboards/pom.xml
+++ b/es/es-dashboards/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>es</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.10.2-dov-1.0</version>
+    <version>3.10.2-dov-1.1-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
