--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -28,10 +28,10 @@
   <parent>
     <artifactId>geonetwork</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.10.2-dov-1.0</version>
+    <version>3.10.2-dov-1.1-SNAPSHOT</version>
   </parent>
 
-  <version>3.10.2-dov-1.0</version>
+  <version>3.10.2-dov-1.1-SNAPSHOT</version>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>schemas</artifactId>
