--- a/workers/wfsfeature-harvester/pom.xml
+++ b/workers/wfsfeature-harvester/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>workers</artifactId>
     <groupId>org.geonetwork-opensource</groupId>
-    <version>3.10.2-dov-1.0</version>
+    <version>3.10.2-dov-1.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
